Added dynamic ruby navigation and notification for home page

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -1,6 +1,6 @@
 @import 'welcome';
-/*@import 'podcasts';
-*/@import 'colors';
+@import 'podcasts';
+@import 'colors';
 @import 'normalize';
 
 html, body {
