--- a/app/assets/stylesheets/welcome.css.scss
+++ b/app/assets/stylesheets/welcome.css.scss
@@ -1,7 +1,7 @@
 @import 'colors';
 @import 'normalize';
-/*@import 'podcasts';
-*/
+@import 'podcasts';
+
 
 #background {
 	background-image: image-url("home_background.jpg");
