--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,7 +1,7 @@
 <div id="background">
 	<header class="clearfix">
 		<div class="wrapper_wide">
-			<a href="#" id="logo">Discpod</a>
+			<%= link_to "Discpod", root_path, id:"logo" %>
 			<nav>
 				<ul>
 					 <!-- Normally for "Users", in our case, "podcasts" are our users -->
