--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,7 +3,6 @@
   <head>
     <title>Discpod</title>
     <link href="https://fonts.googleapis.com/css?family=Libre+Franklin:300,400,700,900" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/3.0.3/normalize.min.css">
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
     <%= csrf_meta_tags %>
     <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
@@ -12,17 +11,37 @@
 
   <body>
   
-  <!-- from devise gem -->
-  <!-- set conditional to make sure it goes away when action completed (ex: login) -->
-  <% if notice %>
-	<p class="notice">
-    <%= notice %>
-  </p>
-  <% elsif alert %>
-	<p class="alert">
-    <%= alert %>   
-  </p>
-  <% end %>
+    <!-- from devise gem -->
+    <!-- set conditional to make sure it goes away when action completed (ex: login) -->
+    <% if notice %>
+  	<p class="notice">
+      <%= notice %>
+    </p>
+    <% elsif alert %>
+  	<p class="alert">
+      <%= alert %>   
+    </p>
+    <% end %>
+    
+    <header id="main_header" class="clearfix">
+        <div class="wrapper_wide">
+          <%= link_to "Discpod", root_path, id:"logo" %>
+            <nav>
+              <ul>
+                <!-- Normally for "Users", in our case, "podcasts" are our users -->
+                <% unless podcast_signed_in? %>
+                <li><%= link_to "Explore", new_podcast_session_path %></li>
+                <li><%= link_to "Sign In", new_podcast_session_path %></li>
+                <li><%= link_to "Create a Podcast", new_podcast_registration_path %></li>
+                <% else %>
+                <li><a href="#">Dashboard</a></li>
+                <li><%= link_to "Explore", new_podcast_session_path %></li>
+                <li><%= link_to "Sign Out", destroy_podcast_session_path, method: :delete %></li>
+                <% end %>
+              </ul>
+            </nav>
+        </div>
+    </header>
 
     <%= yield %>
 
