--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -6,7 +6,7 @@
 				<ul>
 					 <!-- Normally for "Users", in our case, "podcasts" are our users -->
 					<% unless podcast_signed_in? %>
-					<li><%= link_to "Explore", new_podcast_session_path %></li>
+					<li><%= link_to "Explore", podcasts_path %></li>
 					<li><%= link_to "Sign In", new_podcast_session_path %></li>
 					<li><%= link_to "Create a Podcast", new_podcast_registration_path %></li>
 					<% else %>
@@ -21,6 +21,6 @@
 	<div class="wrapper_skinny">
 		<h1>Create &amp; Discover<br>Podcasts</h1>
 		<%= link_to "Create a Podcast", new_podcast_registration_path, class: "button button_highlight" %>
-		<%= link_to "Explore", new_podcast_session_path, class: "button button_dark" %>
+		<%= link_to "Explore", podcasts_path, class: "button button_dark" %>
 	</div>
 </div>
