Set up episode controller, fixed bugs, set up views

--- a/app/views/podcasts/index.html.erb
+++ b/app/views/podcasts/index.html.erb
@@ -10,7 +10,7 @@
 					<li>
 					<img src="images/podcast_1.jpg" alt="Podcast 1">
 					<div class="podcast_overview">
-						<h2><% podcast.title %></h2>
+						<h2><%= podcast.title %></h2>
 						<p class="episode_count">Episode 1</p>
 					</div>
 				</li>
