--- a/app/views/episodes/show.html.erb
+++ b/app/views/episodes/show.html.erb
@@ -19,14 +19,24 @@
 		<%= link_to podcasts_path do %>
 			All Podcasts
 			<span>/</span>
-			The First Podcast
+			<%= link_to @podcast.title, podcast_path(@podcast) %>
+			<span>/</span>
+			<%= @episode.title %>
 		<% end %>
+	</div>
+
+	<div id="episode_content">
+		<div class="wrapper_skinny">
+			<img src="images/podcast_1.jpg" class="current_episode_thumbnail">
+			<h2><%= @episode.title %></h2>
+			<p class="description"><%= @episode.description %></p>
+		</div>
 	</div>
 
 	<div id="episodes">
 		<div class="wrapper_skinny">
 			<ul class="clearfix">
-			<% @episodes.each do |episode| %>
+				<% @episodes.each do |episode| %>
 				<li class="clearfix">
 					<div class="episode_thumbnail">
 						<a href="#">
@@ -38,11 +48,11 @@
 						<p class="description"><%= truncate(episode.description, length: 150) %></p>
 					</div>
 				</li>
-			<% end %>
+				<% end %>
 			</ul>
 		</div>
 	</div>
-	</div>
+</div>
 
 <div class="pagination">
 	<span class="span previous_page disabled">Previous</span>
