--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -5,7 +5,7 @@ go to new to allow users newly register to edit content -->
 <div id="podcast_show">
   <div id="show_banner">
     <div class="wrapper_skinny">
-      <h1>The First Podcast Dashboard</h1>
+      <h1><%= @podcast.title %></h1>
     </div>
   </div>
   
