--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -38,6 +38,11 @@ go to new to allow users newly register to edit content -->
       </div>
 
       <div class="field">
+        <%= f.label :thumbnail %><br />
+        <%= f.file_field :thumbnail %>
+      </div>
+
+      <div class="field">
         <%= f.label :email %><br />
         <%= f.email_field :email %>
       </div>
