--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -19,6 +19,12 @@
         <%= f.label :email %><br />
         <%= f.email_field :email %>
       </div>
+      
+      <!-- make sure this is permited in the podcast controller -->
+      <div class="field">
+        <%= f.label :thumbnail %><br />
+        <%= f.file_field :thumbnail %>
+      </div>
 
       <div class="field">
         <%= f.label :password %>
