--- a/app/views/episodes/_form.html.erb
+++ b/app/views/episodes/_form.html.erb
@@ -9,6 +9,12 @@
 		<%= f.label :description %><br>
 		<%= f.text_area :description %>
 	</div>
+	
+	<!-- make sure this is permited in the episode controller -->
+	<div class="field">
+		<%= f.label :episode_thumbnail %><br>
+		<%= f.file_field :episode_thumbnail %>
+	</div>
 
 	<div class="actions">
 		<%= f.submit "Update Episode", class:"button button_highlight button_block" %>
