--- a/app/views/episodes/show.html.erb
+++ b/app/views/episodes/show.html.erb
@@ -27,7 +27,7 @@
 
 	<div id="episode_content">
 		<div class="wrapper_skinny">
-			<img src="images/podcast_1.jpg" class="current_episode_thumbnail">
+			<%= image_tag @episode.episode_thumbnail.url(:medium), class: "current_episode_thumbnail" %>
 			<h2><%= @episode.title %></h2>
 			<p class="description"><%= @episode.description %></p>
 		</div>
@@ -40,7 +40,7 @@
 				<li class="clearfix">
 					<div class="episode_thumbnail">
 						<a href="#">
-							<img src="images/podcast_2.jpg" alt="Podcast 2">
+							<%= image_tag episode.episode_thumbnail.url(:medium), class: "current_episode_thumbnail" %>
 						</a>
 					</div>
 					<div class="episode_overview">
