--- a/app/views/podcasts/dashboard.html.erb
+++ b/app/views/podcasts/dashboard.html.erb
@@ -23,7 +23,7 @@
 				<li class="clearfix">
 					<div class="episode_thumbnail">
 						<a href="episode.html">
-							<img src="images/podcast_2.jpg" alt="Podcast 2">
+							<%= image_tag episode.episode_thumbnail.url(:medium) %>
 						</a>
 					</div>
 					<div class="episode_overview">
