--- a/app/views/podcasts/show.html.erb
+++ b/app/views/podcasts/show.html.erb
@@ -30,7 +30,7 @@
 				<li class="clearfix">
 					<div class="episode_thumbnail">
 						<a href="#">
-							<img src="images/podcast_2.jpg" alt="Podcast 2">
+							<%= image_tag episode.episode_thumbnail.url(:medium) %>
 						</a>
 					</div>
 					<div class="episode_overview">
