Added MP3 Upload to episode

--- a/app/views/episodes/_form.html.erb
+++ b/app/views/episodes/_form.html.erb
@@ -9,6 +9,11 @@
 		<%= f.label :description %><br>
 		<%= f.text_area :description %>
 	</div>
+
+	<div class="field">
+		<%= f.label :mp3 %><br>
+		<%= f.file_field :mp3 %>
+	</div>
 	
 	<!-- make sure this is permited in the episode controller -->
 	<div class="field">
