--- a/app/views/episodes/show.html.erb
+++ b/app/views/episodes/show.html.erb
@@ -25,13 +25,86 @@
 		<% end %>
 	</div>
 
-	<div id="episode_content">
-		<div class="wrapper_skinny">
-			<%= image_tag @episode.episode_thumbnail.url(:medium), class: "current_episode_thumbnail" %>
-			<h2><%= @episode.title %></h2>
-			<p class="description"><%= @episode.description %></p>
+		<div id="episode_content">
+			<div class="wrapper_skinny">
+				<%= image_tag @episode.episode_thumbnail.url(:medium) , class: "current_episode_thumbnail" %>
+				<h2><%= @episode.title %></h2>
+				<p class="description"><%= @episode.description %></p>
+				
+				<!-- jPlayer -->
+				<div id="jquery_jplayer_1" class="jp-jplayer"></div>
+				<div id="jp_container_1" class="jp-audio">
+					<div class="jp-type-single">
+						<div class="jp-gui jp-interface">
+							<div class="jp-controls">
+								<li><a href="javascript:;" class="jp-play" tabindex="1">&#333333;</a></li>
+								<li><a href="javascript:;" class="jp-pause" tabindex="1">&#333333;</a></li>
+								<li><a href="javascript:;" class="jp-mute" tabindex="1">&#333333;</a></li>
+								<li><a href="javascript:;" class="jp-unmute" tabindex="1">&#333333;</a></li>
+							</div>
+							<div class="jp-progress">
+								<div class="jp-seek-bar">
+									<div class="jp-play-bar"></div>
+								</div>
+							</div>
+							<div class="jp-volume-bar">
+								<div class="jp-volume-bar-value"></div>
+							</div>
+							<div class="jp-time-holder">
+								<div class="jp-current-time"</div>
+							</div>
+						</div>
+						<div class="jp-no-solution">
+							<span>Update Required</span>
+							To play the media you will need to either update your browser to a recent version or update your <a href="http://get.adobe.com/flashplayer/" target="_blank">Flash plugin</a>.
+						</div>
+					</div>
+				</div>
+				<!-- end jPlayer -->
+
+				<!-- jPlayer -->
+				<div id="jquery_jplayer_1" class="jp-jplayer"></div>
+				<div id="jp_container_1" class="jp-audio" role="application" aria-label="media player">
+				  <div class="jp-type-single">
+				    <div class="jp-gui jp-interface">
+				      <div class="jp-volume-controls">
+				        <button class="jp-mute" role="button" tabindex="0">mute</button>
+				        <button class="jp-volume-max" role="button" tabindex="0">max volume</button>
+				        <div class="jp-volume-bar">
+				          <div class="jp-volume-bar-value"></div>
+				        </div>
+				      </div>
+				      <div class="jp-controls-holder">
+				        <div class="jp-controls">
+				          <button class="jp-play" role="button" tabindex="0">play</button>
+				          <button class="jp-stop" role="button" tabindex="0">stop</button>
+				        </div>
+				        <div class="jp-progress">
+				          <div class="jp-seek-bar">
+				            <div class="jp-play-bar"></div>
+				          </div>
+				        </div>
+				        <div class="jp-current-time" role="timer" aria-label="time">&nbsp;</div>
+				        <div class="jp-duration" role="timer" aria-label="duration">&nbsp;</div>
+				        <div class="jp-toggles">
+				          <button class="jp-repeat" role="button" tabindex="0">repeat</button>
+				        </div>
+				      </div>
+				    </div>
+				    <div class="jp-details">
+				      <div class="jp-title" aria-label="title">&nbsp;</div>
+				    </div>
+				    <div class="jp-no-solution">
+				      <span>Update Required</span>
+				      To play the media you will need to either update your browser to a recent version or update your <a href="http://get.adobe.com/flashplayer/" target="_blank">Flash plugin</a>.
+				    </div>
+				  </div>
+				</div>
+				<!-- end jPlayer -->
+
+
+			</div>
 		</div>
-	</div>
 
 	<div id="episodes">
 		<div class="wrapper_skinny">
@@ -61,3 +134,29 @@
 	<a href="#">2</a>
 	<a href="#" class="next_page">Next</a>
 </div>
+
+<script>
+	$(document).ready(function(){
+		$("#jquery_jplayer_1").jPlayer({
+			ready: function (event) {
+				$(this).jPlayer("setMedia", {
+					mp3: "<%= @episode.mp3.url %>"
+					// title: "Bubble",
+					// m4a: "http://jplayer.org/audio/m4a/Miaow-07-Bubble.m4a",
+					// oga: "http://jplayer.org/audio/ogg/Miaow-07-Bubble.ogg"
+				});
+			},
+			swfPath: "../dist/jplayer",
+			supplied: "m4a, oga",
+			wmode: "window",
+			useStateClassSkin: true,
+			autoBlur: false,
+			smoothPlayBar: true,
+			keyEnabled: true,
+			remainingDuration: true,
+			toggleDuration: true
+		});
+
+		$("#jplayer_inspector").jPlayerInspector({jPlayer:$("#jquery_jplayer_1")});
+	});
+</script>
