--- a/app/views/episodes/show.html.erb
+++ b/app/views/episodes/show.html.erb
@@ -42,17 +42,21 @@
 								<li><a href="javascript:;" class="jp-mute" tabindex="1">&#333333;</a></li>
 								<li><a href="javascript:;" class="jp-unmute" tabindex="1">&#333333;</a></li>
 							</div>
+
 							<div class="jp-progress">
 								<div class="jp-seek-bar">
 									<div class="jp-play-bar"></div>
 								</div>
 							</div>
+
 							<div class="jp-volume-bar">
 								<div class="jp-volume-bar-value"></div>
 							</div>
+
 							<div class="jp-time-holder">
-								<div class="jp-current-time"</div>
+								<div class="jp-current-time"></div>
 							</div>
+
 						</div>
 						<div class="jp-no-solution">
 							<span>Update Required</span>
@@ -99,7 +103,7 @@
   $("#jquery_jplayer_1").jPlayer({
    ready: function () {
     $(this).jPlayer("setMedia", {
-     mp3: "<%= @episode.mp3.url %>",
+    	mp3: "<%= @episode.mp3.url %>";
     });
    },
    swfPath: "/js",
