--- a/app/views/episodes/show.html.erb
+++ b/app/views/episodes/show.html.erb
@@ -37,10 +37,10 @@
 					<div class="jp-type-single">
 						<div class="jp-gui jp-interface">
 							<div class="jp-controls">
-								<li><a href="javascript:;" class="jp-play" tabindex="1">&#333333;</a></li>
-								<li><a href="javascript:;" class="jp-pause" tabindex="1">&#333333;</a></li>
-								<li><a href="javascript:;" class="jp-mute" tabindex="1">&#333333;</a></li>
-								<li><a href="javascript:;" class="jp-unmute" tabindex="1">&#333333;</a></li>
+								<li><a href="javascript:;" class="jp-play" tabindex="1"><i class="fa fa-play" aria-hidden="true"></i></a></li>
+								<li><a href="javascript:;" class="jp-pause" tabindex="1"><i class="fa fa-pause" aria-hidden="true"></i></a></li>
+								<li><a href="javascript:;" class="jp-mute" tabindex="1"><i class="fa fa-volume-up" aria-hidden="true"></i></a></li>
+								<li><a href="javascript:;" class="jp-unmute" tabindex="1"><i class="fa fa-volume-off" aria-hidden="true"></i></a></li>
 							</div>
 
 							<div class="jp-progress">
@@ -111,7 +111,6 @@
     wmode: "window",
     useStateClassSkin: true,
     autoBlur: false,
-    smoothPlayBar: true,
     keyEnabled: true,
     remainingDuration: true,
     toggleDuration: true
