--- a/app/views/podcasts/index.html.erb
+++ b/app/views/podcasts/index.html.erb
@@ -4,7 +4,7 @@
 
 <div id="podcasts" class="clearfix">
 	<div class="wrapper">
-		<ul>
+		<ul class="clearfix">
 			<% @podcasts.each do |podcast| %>
 				<%= link_to podcast do %>
 					<li>
@@ -17,13 +17,7 @@
 				<% end %>
 			<% end %>
 		</ul>
-	</div>
+
+		<%= will_paginate @podcasts, previous_label: "Previous", next_label: "Next" %>
 </div>
 
-<div class="pagination">
-	<span class="span previous_page disabled">Previous</span>
-	<!-- em, for will_paginate -->
-	<em class="current">1</em>
-	<a href="#">2</a>
-	<a href="#" class="next_page">Next</a>
-</div>
