--- a/app/views/podcasts/show.html.erb
+++ b/app/views/podcasts/show.html.erb
@@ -41,11 +41,5 @@
 		</div>
 	</div>
 	</div>
-
-<div class="pagination">
-	<span class="span previous_page disabled">Previous</span>
-	<!-- em, for will_paginate -->
-	<em class="current">1</em>
-	<a href="#">2</a>
-	<a href="#" class="next_page">Next</a>
-</div>
+		
+<%= will_paginate @episodes, previous_label: "Previous", next_label: "Next" %>
