--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -71,6 +71,19 @@ html {
 	margin: 0 auto;
 }
 
+#notice_wrapper {
+	width: 100%;
+	position: absolute;
+	background: $mainone;
+	z-index: 999;
+	p {
+		color: $white;
+		text-align: center;
+		font-weight: 700;
+		font-size: .9em;
+	}
+}
+
 #main_header {
 	color: $dark;
 	background: $white;
