--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,21 +13,31 @@
   
     <!-- from devise gem -->
     <!-- set conditional to make sure it goes away when action completed (ex: login) -->
-    <% if notice %>
-  	<p class="notice">
-      <%= notice %>
-    </p>
-    <% elsif alert %>
-  	<p class="alert">
-      <%= alert %>   
-    </p>
-    <% end %>
+<% if notice %>
+<div id="notice_wrapper">
+  <p class="notice"><%= notice %></p>
+</div>
+<% elsif alert %>
+<div id="notice_wrapper">
+<p class="alert"><%= alert %></p>
+</div>
+<% end %>
 
-    <% unless current_page?(root_path) %>
-      <%= render 'layouts/header'; %>
-    <% end %>
+<% unless current_page?(root_path) %>
+  <%= render 'layouts/header'; %>
+<% end %>
 
-    <%= yield %>
+<%= yield %>
+
+<script>
+$(document).ready(function(){
+  setTimeout(function() {
+    $('#notice_wrapper').fadeOut("slow", function() {
+      $this.remove();
+    });
+  }, 3500 );
+});
+</script>
 
   </body>
 </html>
