--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -133,7 +133,7 @@ html {
 	}
 
 .sign_in_banner {
-	background-image: image-url("/sign_in_banner.jpg");
+	background-image: image-url("sign_in_banner.jpg");
 }
 
 .sign_up_banner {
