--- a/app/assets/stylesheets/podcasts.css.scss
+++ b/app/assets/stylesheets/podcasts.css.scss
@@ -313,3 +313,224 @@
 		}
 	}	
 }
+
+@media only screen and (max-width: 768px) {
+	#podcasts {
+		margin: 0 auto;
+		padding: 0 0 3em 0;
+		.wrapper {
+			width: 60%;
+		}
+			ul {
+				margin: 0;
+				li {
+					width: 100%;
+					margin: 0 1% 2em 1%;
+					img {
+						width: 100%;
+						max-width: 100%;
+					}
+					.podcast_overview {
+						padding: 1em 0 0 0;
+						margin: 0 auto;
+						text-align: center;
+						border-bottom: none;
+					}
+					&:hover {
+						.podcast_overview {
+							border-bottom: none;
+						}
+					}
+				}
+			}
+	}
+	#podcast_show {
+		#show_banner {
+			h1 {
+				font-size: 1.7em;
+			}
+			.description {
+				font-size: 0.9em;
+			}
+			.wrapper_skinny {
+				width: 100%;
+			}
+		}
+		#breadcrumb {
+			a {
+				text-decoration: none;
+				font-size: .7em;
+			}
+			span {
+				margin: 0 .3em;
+			}
+		}
+		#links {
+		padding: 1.5em 0;
+			ul {			
+				list-style: none;
+				padding-left: 0;
+				padding: 1em 0;
+				margin-bottom: .5em;
+				li {
+					display: block;
+					margin: 0 1em 0 0;
+					padding: 0 0 1.2em 0;
+					a {
+						color: $dark;
+						text-decoration: none;
+						&:hover {
+							color: $mainone;
+						}
+					}
+				}
+				.current {
+						color: $mainone;
+					}
+			}
+		}
+		#episodes {
+			padding: 1em 0;
+			.wrapper_skinny {
+				width: 75%;
+			}
+			ul {
+				list-style: none;
+				padding-left: 0;
+				li {
+					padding: 0 0 2em 0;
+					margin-bottom: 2em;
+					.episode_thumbnail {
+						width: 100%;
+						float: left;
+						img {
+							max-width: 100%;
+						}
+					}
+					.episode_overview {
+						width: 72%;
+						float: left;
+						margin: 0 0 auto 0;
+						h2 {
+							a {
+								color: $dark;
+								text-decoration: none;
+								font-size: .9em;
+							}
+						}
+						.description {
+							color: $grey;
+							font-weight: 300;
+							line-height: 1.7em;
+							font-size: .9em;
+							padding: 0;
+						}
+						.authorized_links {
+							font-weight: 700;
+							font-size: .8em;
+							a {
+								margin: 0 4em 0 0;
+								color: $mainone;
+							}
+						}
+					}
+				}
+			}
+		}
+		#episode_content {
+		padding: 2em 0;
+		margin-bottom: 2em;
+			.wrapper_skinny{
+				width: 90%;
+			}
+			h2 {
+				font-size: 1.4em;
+			}
+			.jp-jplayer,.jp-audio {
+		    width: 100%;
+		    margin: 3rem auto .5rem auto;
+			}
+			.jp-title {
+		    font-size: 12px;
+		    text-align: center;
+		    color: #999;
+			}
+			.jp-title ul {
+		    padding: 0;
+		    margin: 0;
+		    list-style: none;
+			}
+			.jp-gui {
+		    position: relative;
+		    background: $mainone;
+		    transition: background .4s ease-in-out;
+		    border-radius: 3px;
+		    overflow: hidden;
+		    margin-top: 10px;
+			}
+			.jp-controls {
+		    padding: 0;
+		    margin: 0;
+		    list-style: none;
+		    font-family: "FontAwesome";
+			}
+
+			.jp-controls li {
+		    display: inline;
+			}
+
+			.jp-controls a {
+		    color: #fff;
+			}
+			.jp-play,.jp-pause {
+		    width: 60px;
+		    height: 40px;
+		    display: inline-block;
+		    text-align: center;
+		    line-height: 43px;
+		    border-right: 1px solid lighten($mainone, 10%);
+			}
+
+			.jp-time-holder {
+		    /*color: #FFF;
+		    font-size: 10px;
+		    line-height: 14px;
+		    position: absolute;
+		    right: 90px;
+		    top: 14px;*/
+		    display: none;
+			}
+			.jp-progress {
+		    background-color: darken($mainone, 25%);
+		    border-radius: 20px 20px 20px 20px;
+		    overflow: hidden;
+		    position: absolute;
+		    top: 15px;
+		    width: 55%;
+			}
+
+			.jp-play-bar {
+		    height: 12px;
+		    background-color: #fff;
+		    border-radius: 20px 20px 20px 20px;
+			}
+
+			.jp-volume-bar {
+		    position: absolute;
+		    right: 10px;
+		    top: 17px;
+		    width: 45px;
+		    height: 8px;
+		    border-radius: 20px 20px 20px 20px;
+		    background-color: darken($mainone, 25%);
+		    overflow: hidden;
+			}
+
+			.jp-volume-bar-value {
+		    background-color: #fff;
+		    height: 8px;
+		    border-radius: 20px 20px 20px 20px;
+			}
+		}
+	}
+}
