--- a/app/assets/stylesheets/welcome.css.scss
+++ b/app/assets/stylesheets/welcome.css.scss
@@ -47,3 +47,55 @@
 		margin: 1.5em 2.5% 0 0;
 	}
 }
+
+@media only screen and (max-width: 768px) {
+	#main_nav_welcome {
+		/*under 768px width, we hide the main nav*/
+		display: none;
+	}
+	#main_nav_welcome.active {
+		display: block;
+		width: 100%;
+		ul {
+			margin-top: 7%;
+			padding: 0;
+		}
+			a {
+				display: block;
+				color: $dark;
+				font-weight: 700;
+				padding: 1.2em 0 1.2em 0 !important;
+				border-bottom: 1px solid $dark !important;
+				/*removes border for last elements*/
+				&:hover{
+					color: lighten($dark, 20%);
+				}
+				&:last-child {
+					border-bottom: none;
+				}
+			}
+	}
+		/*pops the menu bar in the main nav*/
+		.menu_welcome {
+			display: block;
+			float: right;
+			color: $white;
+			i {
+				font-size: 1.5em;
+				color: #dark;
+			}
+		}
+	}
+	#background {
+	header {
+		padding: 2.5em 0;
+		#logo {
+			float: left;
+			text-transform: uppercase;
+			font-weight: 700;
+			text-decoration: none;
+			color: $white;
+			font-size: 1.1em;
+		}
+	}
+}
