--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,7 +1,8 @@
 <header id="main_header" class="clearfix">
     <div class="wrapper_wide">
       <%= link_to "Discpod", root_path, id:"logo" %>
-        <nav>
+      <a href="#" class="menu"><i class="fa fa-bars"></i></a>
+        <nav id="main_nav">
           <ul>
             <!-- Normally for "Users", in our case, "podcasts" are our users -->
             <% unless podcast_signed_in? %>
@@ -17,3 +18,17 @@
         </nav>
     </div>
 </header>
+
+<script>
+  $(document).ready(function() {
+  
+  $('.menu').click(function(e) {
+    e.stopPropagation();
+    $('#main_nav').toggleClass('active');
+  });
+
+  $(document).click(function() {
+    $('#main_nav').removeClass('active');
+  });
+});
+</script>
