--- a/app/views/podcasts/index.html.erb
+++ b/app/views/podcasts/index.html.erb
@@ -7,7 +7,7 @@
 		<ul class="clearfix">
 			<% @podcasts.each do |podcast| %>
 				<%= link_to podcast do %>
-					<li>
+				<li>
 					<%= image_tag podcast.thumbnail.url(:medium) %>
 					<div class="podcast_overview">
 						<h2><%= podcast.title %></h2>
@@ -17,7 +17,7 @@
 				<% end %>
 			<% end %>
 		</ul>
-
-		<%= will_paginate @podcasts, previous_label: "Previous", next_label: "Next" %>
+	</div>
+	<%= will_paginate @podcasts, previous_label: "Previous", next_label: "Next" %>
 </div>
 
